# fermi

./: .env.example  .gitignore  .gitmodules  EXPERIMENTS.md  GPU_COOLING.md  GPU_OPTIMIZATION.md  Makefile  PRIMEIRO_TESTE.md  QUICKSTART.md  README.backup.md  README.md  README.old.md  premissas.txt  pyproject.toml  requirements.txt  session_notes_2026-01-11.md  test_all_models.sh  test_model_loading.py  teste.ipynb  teste.py  validate_refactoring.py
.run/: recbole_data_pipeline.run.xml  run_benchmark.run.xml
config/: project_config.yaml  tuning_config.yaml
data/: __init__.py  prepare_dataset.py
docs/: execution.md  experiments.md  gpu-cooling.md  gpu-optimization.md  hyperparameter_tuning.md  metodologia.md
notebooks/: explore_recommendations.ipynb  hyperparameter_tuning.ipynb  recbole_train_model.ipynb
outputs/: README.md
outputs/cdf/: resumo.txt
outputs/consolidated/: ranking.csv  ranking_by_topk.csv  results.csv  runs_raw.csv
results/: aggregated_results.csv  raw_results.csv
scripts/: analise_sessoes.py  install.sh  manage_checkpoints.py  monitor_gpu.sh  monitor_gpu.sh.backup  results.py  run_all.sh  run_all_experiments.sh  run_all_parallel.sh  run_benchmark.sh  run_benchmark_queue.sh  run_parallel.sh  run_parallel_gpu.sh  run_parallel_slices.sh  setup_wrappers.sh  test_knn_models.py  tune_remaining_models.sh  validate_canonical_id.py
src/: aggregate_results.py  eval_only.py  hyperparameter_tuning.py  metrics.py  run_benchmark.py  run_experiments.py  run_recbole.py  run_session_rec.py
src/api/: __init__.py  (+2 more)
utils/: config.py  enviroment.py
(+238 files in other folders)
