[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fermi"
version = "0.1.0"
description = "Session-based Recommendation System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyspark>=4.0.0",
    "pyarrow>=11.0.0",
    "recbole>=1.0.0",
    "pandas>=1.0.0",
    "numpy>=1.21.0,<2.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "tabulate>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
